zerocopy-derive/tests/ui/late_compile_pass.stderr
error[E0277]: the trait bound `AsBytes1: HasPadding<false>` is not satisfied
  --> $DIR/late_compile_pass.rs:27:10
   |
27 | #[derive(AsBytes)]
   |          ^^^^^^^ the trait `HasPadding<false>` is not implemented for `AsBytes1`
   |
   = help: the following implementations were found:
             <AsBytes1 as HasPadding<true>>
note: required by a bound in `assert_no_padding`
  --> $DIR/late_compile_pass.rs:27:10
   |
27 | #[derive(AsBytes)]
   |          ^^^^^^^ required by this bound in `assert_no_padding`
   = note: this error originates in the derive macro `AsBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&'static str: FromBytes` is not satisfied
  --> $DIR/late_compile_pass.rs:18:10
   |
18 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `&'static str`
   |
note: required by a bound in `ImplementsFromBytes`
  --> $DIR/late_compile_pass.rs:18:10
   |
18 | #[derive(FromBytes)]
   |          ^^^^^^^^^ required by this bound in `ImplementsFromBytes`
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `u16: Unaligned` is not satisfied
  --> $DIR/late_compile_pass.rs:39:10
   |
39 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `u16`
   |
note: required by a bound in `<Unaligned1 as Unaligned>::only_derive_is_allowed_to_implement_this_trait::ImplementsUnaligned`
  --> $DIR/late_compile_pass.rs:39:10
   |
39 | #[derive(Unaligned)]
   |          ^^^^^^^^^ required by this bound in `<Unaligned1 as Unaligned>::only_derive_is_allowed_to_implement_this_trait::ImplementsUnaligned`
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `u16: Unaligned` is not satisfied
  --> $DIR/late_compile_pass.rs:47:10
   |
47 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `u16`
   |
note: required by a bound in `<Unaligned2 as Unaligned>::only_derive_is_allowed_to_implement_this_trait::ImplementsUnaligned`
  --> $DIR/late_compile_pass.rs:47:10
   |
47 | #[derive(Unaligned)]
   |          ^^^^^^^^^ required by this bound in `<Unaligned2 as Unaligned>::only_derive_is_allowed_to_implement_this_trait::ImplementsUnaligned`
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `u16: Unaligned` is not satisfied
  --> $DIR/late_compile_pass.rs:54:10
   |
54 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `u16`
   |
note: required by a bound in `<Unaligned3 as Unaligned>::only_derive_is_allowed_to_implement_this_trait::ImplementsUnaligned`
  --> $DIR/late_compile_pass.rs:54:10
   |
54 | #[derive(Unaligned)]
   |          ^^^^^^^^^ required by this bound in `<Unaligned3 as Unaligned>::only_derive_is_allowed_to_implement_this_trait::ImplementsUnaligned`
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
